fix: fixed overlapping issue by changing z-index of poupup window

--- a/frontend-nextjs/src/app/styles.css
+++ b/frontend-nextjs/src/app/styles.css
@@ -1,6 +1,7 @@
 .swiper {
     width: 100%;
     height: 85vh;
+    z-index: 2;
   }
   
   .swiper-slide {
